plugins {
	id 'java'
	id 'org.springframework.boot' version '3.3.2'
	id 'io.spring.dependency-management' version '1.1.6'
}

group = 'CoinIndicator'
version = '0.0.1-SNAPSHOT'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(17)
	}
}

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
}

dependencies {
	//web
	implementation 'org.springframework.boot:spring-boot-starter-web'
	//jpa
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	//querydsl
	implementation 'com.querydsl:querydsl-jpa:5.0.0:jakarta'
	annotationProcessor "com.querydsl:querydsl-apt:5.0.0:jakarta"
	annotationProcessor "jakarta.annotation:jakarta.annotation-api"
	annotationProcessor "jakarta.persistence:jakarta.persistence-api"
	//mysql
	runtimeOnly 'com.mysql:mysql-connector-j'
	implementation group: 'org.hibernate', name: 'hibernate-spatial', version: '6.0.1.Final'
	//security
	implementation 'org.springframework.boot:spring-boot-starter-security'
	//oauth2 client
	implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
	//google api client
	implementation 'com.google.api-client:google-api-client:1.32.1'
	//jwt
	implementation group: 'io.jsonwebtoken', name: 'jjwt-api', version: '0.11.5'
	runtimeOnly group: 'io.jsonwebtoken', name: 'jjwt-impl', version: '0.11.5'
	runtimeOnly group: 'io.jsonwebtoken', name: 'jjwt-jackson', version: '0.11.5'
	//redis
	implementation 'org.springframework.boot:spring-boot-starter-data-redis'
	//OKHttp
//	implementation group: 'com.squareup.okhttp', name: 'okhttp', version: '2.7.5'
	implementation 'com.squareup.okhttp3:okhttp:4.9.3'
	//websocket
	implementation 'org.springframework.boot:spring-boot-starter-websocket'
	//feign client
	implementation platform("org.springframework.cloud:spring-cloud-dependencies:2023.0.2")
	implementation 'org.springframework.cloud:spring-cloud-starter-openfeign'
	implementation 'io.github.openfeign:feign-okhttp:11.7'
	//lombok
	compileOnly 'org.projectlombok:lombok'
	annotationProcessor 'org.projectlombok:lombok'
	//validation
	implementation 'org.springframework.boot:spring-boot-starter-validation'
	//gson
	implementation 'com.google.code.gson:gson:2.9.0'

	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
}

tasks.named('test') {
	useJUnitPlatform()
}
